# rusty-neat

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: genome.rs  hyperneat.rs  lib.rs  main.rs  network.rs  parameters.rs  population.rs  random.rs  serialization.rs  species.rs
