[package]
name = "rusty-neat"
version = "0.1.0"
authors = ["Konstantin Klepikov <oformleno@gmail.com>"]
edition = "2024"
description = "Multy-NEAT rust implementation."
documentation = "https://github.com/KonstantinKlepikov/rusty-neat"
readme = "README.md"
homepage = "https://github.com/KonstantinKlepikov/rusty-neat"
repository = "https://github.com/KonstantinKlepikov/rusty-neat"
license-file = "LICENSE"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
rand = "0.9.2"
